# ugv_nav4d

./: .cproject  .gitignore  .gitlab-ci.yml  .project  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  ConfigLoader_8hpp.html  ConfigLoader_8hpp__incl.map  ConfigLoader_8hpp__incl.md5  ConfigLoader_8hpp_source.html  DebugDrawingDeclarations_8cpp.html  DebugDrawingDeclarations_8cpp__incl.map  DebugDrawingDeclarations_8cpp__incl.md5  Dijkstra_8cpp.html  Dijkstra_8cpp__incl.map  Dijkstra_8cpp__incl.md5  Dijkstra_8hpp.html  Dijkstra_8hpp__dep__incl.map  Dijkstra_8hpp__dep__incl.md5  Dijkstra_8hpp__incl.map  Dijkstra_8hpp__incl.md5  Dijkstra_8hpp_source.html  DiscreteTheta_8cpp.html  DiscreteTheta_8cpp__incl.map  DiscreteTheta_8cpp__incl.md5  DiscreteTheta_8cpp_a11d7a609b508c5bfbf0013a0eaea5768_cgraph.md5  DiscreteTheta_8cpp_a98c2a5eda6b5f134be62913048f286c8_cgraph.map  DiscreteTheta_8hpp.html  DiscreteTheta_8hpp__dep__incl.map  DiscreteTheta_8hpp__dep__incl.md5  DiscreteTheta_8hpp__incl.map  DiscreteTheta_8hpp__incl.md5  DiscreteTheta_8hpp_source.html  Doxyfile.in  EnvironmentXYZTheta_8cpp.html  EnvironmentXYZTheta_8cpp__incl.map  EnvironmentXYZTheta_8cpp__incl.md5  EnvironmentXYZTheta_8hpp.html  EnvironmentXYZTheta_8hpp__dep__incl.map  (+534 more)
.github/workflows/: c-cpp.yml  docs.yml
.kdev4/: ugv_nav4d.kdev4
build_standalone/: CMakeLists.txt  README.md  build.sh  requirements.sh
paper/: paper.bib  paper.md
source_dependencies/: CMakeLists.txt  build.bash  env.sh.in  install_os_dependencies.bash
src/: AreaExplorer.cpp  AreaExplorer.hpp  BaseMapGenerator.cpp  BaseMapGenerator.hpp  Box.hpp  CMakeLists.txt  CollisionCheck.cpp  CollisionCheck.hpp  Config.hpp  ConfigLoader.hpp  DebugDrawingDeclarations.cpp  Dijkstra.cpp  Dijkstra.hpp  DiscreteTheta.cpp  DiscreteTheta.hpp  Dummy.cpp  Dummy.hpp  EnvironmentXYZTheta.cpp  EnvironmentXYZTheta.hpp  EnvironmentXYZThetaDebugData.hpp  FrontierGenerator.cpp  FrontierGenerator.hpp  FrontierTest.cpp  FrontierTestGui.cpp  FrontierTestGui.hpp  Logger.hpp  Main.cpp  MinimalClickGui.cpp  MinimalClickGui.hpp  Mobility.hpp  ObstacleMapGenerator.hpp  ObstacleMapGenerator3D.cpp  ObstacleMapGenerator3D.hpp  ObstacleNode.hpp  OrientedBox.cpp  OrientedBox.hpp  PathStatistic.cpp  PathStatistic.hpp  PathStatistics.cpp  PathStatistics.hpp  (+20 more)
src/gui/: CMakeLists.txt  FrontierTestGui.cpp  FrontierTestGui.hpp  Main.cpp  MinimalClickGui.cpp  MinimalClickGui.hpp  MinimalClickMain.cpp  PlannerGui.cpp  PlannerGui.h  ReplayDump.cpp
src/gui/config/: parameters.yaml
src/test/: CMakeLists.txt  test_DiscreteTheta.cpp  test_EnvironmentXYZTheta.cpp  test_Planner.cpp  test_PreComputedMotions.cpp  test_ugv_nav4d.cpp
test/: CMakeLists.txt  test_Dummy.cpp
test_data/: Plane1Mio.ply  parking_deck.ply  ramp.ply  test_area.ply  test_area2.ply
viz/: CMakeLists.txt  EnvironmentXYZThetaVisualization.cpp  EnvironmentXYZThetaVisualization.hpp  ugv_nav4d-viz.pc.in  vizkit_plugin.rb
